# llm-agent-geoprocessing

./: .dockerignore  .env.example  Dockerfile  Dockerfile.dev  Dockerfile.ui  Makefile  README_PRODUCTION.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
docs/: ARCHITECTURE.md  IMPLEMENTATION_AUDIT.md  MIGRATION.md  OPERATIONS.md  SECURITY.md
secrets/: create_gee-sa.sh
src/llm_geoprocessing/api/: app.py  schemas.py
src/llm_geoprocessing/domain/: config.py  errors.py  geoprocess.py
src/llm_geoprocessing/graph/: builder.py  nodes.py  prompts.py  state.py
src/llm_geoprocessing/llm/: factory.py
src/llm_geoprocessing/mcp/: gee_server.py
src/llm_geoprocessing/observability/: logging.py  tracing.py
src/llm_geoprocessing/persistence/: postgres.py
src/llm_geoprocessing/plugins/: base.py
src/llm_geoprocessing/plugins/gee/: api.py  client.py  schemas.py
streamlit_ui/: app.py
tests/api/: test_chat_ui.py  test_health.py
tests/contract/: test_gee_plugin_api.py
tests/ui/: test_streamlit_assets.py
tests/unit/: test_domain_models.py  test_gee_client.py  test_gemini_planner_output.py  test_graph_fallback.py
