[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-geoprocessing"
version = "0.2.0"
description = "Production-ready LLM geoprocessing agent runtime with LangGraph, FastAPI, MCP, and Docker."
readme = "README_PRODUCTION.md"
requires-python = ">=3.12"
license = {text = "See LICENSE.txt"}
authors = [{ name = "Cristhian Escobar" }]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.0",
  "httpx>=0.27.0",
  "tenacity>=8.5.0",
  "orjson>=3.10.0",
  "python-json-logger>=2.0.7",
  "langchain-core>=0.3.0",
  "langchain-openai>=0.2.0",
  "langchain-google-genai>=2.0.0",
  "langchain-ollama>=0.2.0",
  "langgraph>=0.2.60",
  "langgraph-checkpoint-postgres>=2.0.0",
  "langsmith>=0.1.120",
  "psycopg[binary,pool]>=3.2.0",
  "mcp>=1.7.0",
  "earthengine-api>=1.1.0"
]

[project.optional-dependencies]

ui = [
  "streamlit>=1.41.0",
  "streamlit-folium>=0.23.0",
  "folium>=0.19.0",
  "rasterio>=1.4.0",
  "numpy>=2.0.0",
  "pillow>=10.4.0",
  "requests>=2.32.0"
]

dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",
  "respx>=0.21.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0",
  "types-requests>=2.32.0"
]
geo = [
  "rasterio>=1.3.10",
  "geopandas>=1.0.0"
]

[project.scripts]
geollm-api = "llm_geoprocessing.api.app:main"
geollm-gee-plugin = "llm_geoprocessing.plugins.gee.api:main"
geollm-mcp-gee = "llm_geoprocessing.mcp.gee_server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "TCH", "RUF"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_return_any = true
namespace_packages = true
mypy_path = "src"
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["langgraph.*", "mcp.*", "langchain_google_genai.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q --strict-markers --disable-warnings"
testpaths = ["tests"]
markers = [
  "integration: requires dockerized service dependencies",
  "real_gee: requires real Google Earth Engine credentials"
]
